--- a/src/index.html
+++ b/src/index.html
@@ -1,21 +1,53 @@
 <!DOCTYPE html>
 <html ng-app="ngVn" ng-controller="AppCtrl">
-  <head>
-    <title ng-bind="pageTitle"></title>
+<head>
+  <title ng-bind="pageTitle">Angular</title>
 
-    <meta name="viewport" content="width=device-width, initial-scale=1">
+  <meta name="viewport" content="width=device-width, initial-scale=1">
 
-    <!-- font awesome from BootstrapCDN -->
-    <link href="http://netdna.bootstrapcdn.com/font-awesome/4.0.3/css/font-awesome.css" rel="stylesheet">
+  <!-- font awesome from BootstrapCDN -->
+  <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
+  <link href="http://code.ionicframework.com/ionicons/2.0.1/css/ionicons.min.css" rel="stylesheet">
 
-    <!-- compiled CSS --><% styles.forEach( function ( file ) { %>
-    <link rel="stylesheet" type="text/css" href="<%= file %>" /><% }); %>
+  <!-- compiled CSS --><% styles.forEach( function ( file ) { %>
+  <link rel="stylesheet" type="text/css" href="<%= file %>" /><% }); %>
 
-    <!-- compiled JavaScript --><% scripts.forEach( function ( file ) { %>
-    <script type="text/javascript" src="<%= file %>"></script><% }); %>
+  <!-- compiled JavaScript --><% scripts.forEach( function ( file ) { %>
+  <script type="text/javascript" src="<%= file %>"></script><% }); %>
 
-  </head>
-  <body>
+</head>
+<body>
+  <nav class="menu" id="theMenu" role="navigation">
+    <div class="menu-wrap">
+      <h1 class="logo"><a href="index.html#home">Tembusu</a></h1>
+      <i class="ion-android-close menu-close"></i>
+      <a ui-sref="home" class="view">home</a>
+      <a ui-sref="about" class="view">about</a>
+    </div>
 
-  </body>
+    <!-- Menu button -->
+    <div id="menuToggle"><i class="fa fa-circle-o-notch"></i></div>
+  </nav>
+  <!--
+  <nav class="navbar navbar-inverse" role="navigation">
+    <div class="navbar-header">
+      <a class="navbar-brand" ui-sref="#">AngularUI Router</a>
+    </div>
+    <ul class="nav navbar-nav">
+      <li><a ui-sref="home">Home</a></li>
+      <li><a ui-sref="about">About</a></li>
+    </ul>
+  </nav>
+-->
+  <div class="container">
+    <div ui-view></div>
+  </div>
+
+  <script src="assets/js/jquery.min.js"></script>
+  <script src="assets/js/bootstrap.min.js"></script>
+  <script src="assets/js/classie.js"></script>
+  <script src="assets/js/smoothscroll.js"></script>
+  <script src="assets/js/main.js"></script>
+  <script src="assets/js/retina-1.1.0.js"></script>
+</body>
 </html>
