--- a/src/index.html
+++ b/src/index.html
@@ -19,7 +19,7 @@
 <body>
   <nav class="menu" id="theMenu" role="navigation">
     <div class="menu-wrap">
-      <h1 class="logo"><a href="index.html#home">Tembusu</a></h1>
+      <h1 class="logo view"><a href="index.html#/home">Tembusu</a></h1>
       <i class="ion-android-close menu-close"></i>
       <a ui-sref="home" class="view">home</a>
       <a ui-sref="about" class="view">about</a>
