--- a/src/index.html
+++ b/src/index.html
@@ -22,8 +22,8 @@
       <ul>
           <li><a class="view" ui-sref="home">home</a></li>
           <li><a class="view" ui-sref="about">about</a></li>
-          <li><a class="view" ui-sref="about">news</a></li>
-          <li><a class="view" ui-sref="groups">groups</a></li>
+          <li><a class="view" ui-sref="updates">news</a></li>
+          <li><a class="view" ui-sref="og">groups</a></li>
         </ul>
   </nav>
 
