Update page implementation

--- a/src/index.html
+++ b/src/index.html
@@ -3,7 +3,7 @@
 <head>
   <title ng-bind="pageTitle">Tembusu</title>
 
-  <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1, user-scalable=no"">
+  <meta name="viewport" content="width=device-width, initial-scale=1 maximum-scale=1, user-scalable=no">
 
   <!-- font awesome from BootstrapCDN -->
   <link href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.3.0/css/font-awesome.min.css" rel="stylesheet">
