--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="<%= file %>"></script><% }); %>
 
   </head>
-  <body>
+  <body class="{{ routeClass }}">
     <div class="vn-navbar">
       <nav id="body-nav">
         <ul>
