Completed Info View

--- a/src/index.html
+++ b/src/index.html
@@ -18,12 +18,13 @@
 
   </head>
   <body>
-    <div class="vn-navbar">
+    <div class="vn-navbar container-fluid">
       <nav id="body-nav">
         <ul>
           <li><a class="view" ui-sref="home">home</a></li>
-          <li><a class="view" ui-sref="updates">updates</a></li>
-          <li><a class="view" ui-sref="og">groups</a></li>
+          <li><a class="view" ui-sref="updates">news</a></li>
+          <li><a class="view" ui-sref="og">races</a></li>
+          <li><a class="view" ui-sref="info">info</a></li>
           <li><a class="view" ui-sref="about">about</a></li>
         </ul>
       </nav>
