Building OG SubView

--- a/src/index.html
+++ b/src/index.html
@@ -47,6 +47,7 @@
 
     <div ui-view></div>
 
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular-animate.min.js"></script>
     <script src="assets/js/jquery.min.js"></script>
     <script src="assets/js/bootstrap.min.js"></script>
     <script src="assets/js/classie.js"></script>
