--- a/src/index.html
+++ b/src/index.html
@@ -30,7 +30,7 @@
       </nav>
 
       <!-- Menu Button -->
-      <div id="menuToggle"><i class="fa fa-circle-o-notch"></i></div>
+      <div id="menuToggle"><i class="fa fa-circle-o-notch rotate"></i></div>
 
     </div>
     <!--
@@ -44,7 +44,7 @@
 
 
     </nav> -->
-    
+
     <div ui-view></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular-animate.min.js"></script>
