--- a/src/index.html
+++ b/src/index.html
@@ -17,7 +17,7 @@
     <script type="text/javascript" src="<%= file %>"></script><% }); %>
 
   </head>
-  <body class="{{ routeClass }}">
+  <body ng-cloak class="{{ routeClass }}">
     <div class="vn-navbar container-fluid">
       <nav id="body-nav">
         <ul>
@@ -53,5 +53,6 @@
     <script src="assets/js/classie.js"></script>
     <script src="assets/js/smoothscroll.js"></script>
     <script src="assets/js/navbar.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular-sanitize.min.js"></script>
   </body>
   </html>
