All UI Transistions Complete
@xbili sorry got tried of trying to get ngAnimate to work, used some
jQuery instead.

--- a/src/index.html
+++ b/src/index.html
@@ -45,7 +45,7 @@
 
     </nav> -->
 
-    <div ui-view></div>
+    <div ui-view id="masterUI"></div>
 
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular-animate.min.js"></script>
     <script src="assets/js/jquery.min.js"></script>
