v2 fixes, refer to issue tracker

--- a/src/index.html
+++ b/src/index.html
@@ -54,5 +54,6 @@
     <script src="assets/js/smoothscroll.js"></script>
     <script src="assets/js/navbar.js"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/angular.js/1.4.3/angular-sanitize.min.js"></script>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/ngStorage/0.3.6/ngStorage.min.js"></script>
   </body>
   </html>
